oxker-tui/tests/snapshots/comprehensive_snapshot_tests__charts_empty.snap
---
source: oxker-tui/tests/comprehensive_snapshot_tests.rs
expression: "render_component(&charts_panel, &props, 80, 10)"
---
╭───────────── cpu 00.00% ─────────────╮╭─────────── memory 0.00 kB ───────────╮
│00.00%│                               ││0.00 kB│                              │
│      │                               ││       │                              │
│      │                               ││       │                              │
│      │                               ││       │                              │
│      │                               ││       │                              │
│      │                               ││       │                              │
│      │                               ││       │                              │
│      │•••••••••••••••••••••••••••••••││       │••••••••••••••••••••••••••••••│
╰──────────────────────────────────────╯╰──────────────────────────────────────╯
