oxker-tui/tests/snapshots/comprehensive_snapshot_tests__charts_hidden.snap
---
source: oxker-tui/tests/comprehensive_snapshot_tests.rs
expression: "render_component(&charts_panel, &props, 80, 10)"
---
╭───────────── cpu 26.00% ─────────────╮╭────────── memory 123.73 MB ──────────╮
│30.00%│    ••••••••••••              •││131.07 MB│    ••••••••••••••••••••••••│
│      │••••                           ││         │••••                        │
│      │                               ││         │                            │
│      │                               ││         │                            │
│      │                               ││         │                            │
│      │                               ││         │                            │
│      │                               ││         │                            │
│      │                               ││         │                            │
╰──────────────────────────────────────╯╰──────────────────────────────────────╯
