oxker-tui/tests/snapshots/comprehensive_snapshot_tests__charts_with_data.snap
---
source: oxker-tui/tests/comprehensive_snapshot_tests.rs
expression: "render_component(&charts_panel, &props, 80, 15)"
---
╭───────────── cpu 26.00% ─────────────╮╭────────── memory 123.73 MB ──────────╮
│30.00%│    ••••••••••••              •││131.07 MB│     •••••••••••••••••••••••│
│      │••••                           ││         │  •••                       │
│      │                               ││         │••                          │
│      │                               ││         │                            │
│      │                               ││         │                            │
│      │                               ││         │                            │
│      │                               ││         │                            │
│      │                               ││         │                            │
│      │                               ││         │                            │
│      │                               ││         │                            │
│      │                               ││         │                            │
│      │                               ││         │                            │
│      │                               ││         │                            │
╰──────────────────────────────────────╯╰──────────────────────────────────────╯
