oxker-tui/tests/snapshots/comprehensive_snapshot_tests__commands_stopped.snap
---
source: oxker-tui/tests/comprehensive_snapshot_tests.rs
expression: "render_component(&commands_panel, &props, 60, 8)"
---
┌ Commands ────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
