oxker-tui/tests/snapshots/comprehensive_snapshot_tests__containers_empty.snap
---
source: oxker-tui/tests/comprehensive_snapshot_tests.rs
expression: "render_component(&containers_panel, &props, 120, 10)"
---
┌ Containers ──────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                 no containers running                                                │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
