oxker-tui/tests/snapshots/comprehensive_snapshot_tests__delete_confirm_container.snap
---
source: oxker-tui/tests/comprehensive_snapshot_tests.rs
expression: "render_component(&delete_panel, &props, 80, 24)"
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
        ╭─────────────────────── Confirm Delete ───────────────────────╮        
        │     Are you sure you want to delete container: nginx-web     │        
        │                                                              │        
        │     ╭──────────────────╮            ╭──────────────────╮     │        
        │     │     ( n ) no     │            │     ( y ) yes    │     │        
        │     ╰──────────────────╯            ╰──────────────────╯     │        
        │                                                              │        
        ╰──────────────────────────────────────────────────────────────╯
